# Rust-Project

./: README.md
React_Frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.js
React_Frontend/src/: App.css  App.jsx  Routes.js  index.css  main.jsx  store.js
React_Frontend/src/components/: Carousel.jsx  HProductPage.jsx  HomeProducts.jsx  Navbar.jsx  Products.jsx  ThemeContext.jsx  Toast.jsx  ZTemp.jsx
React_Frontend/src/context/: Config.js
React_Frontend/src/data/: AuthContext.jsx  Navigation.jsx  ProductData.js
React_Frontend/src/pages/: Appliances.jsx  Cart copy.jsx  Cart.jsx  Home.jsx  Login.jsx  Men.jsx  Signup.jsx  Women.jsx
backend_rust/: .gitignore  Cargo.toml
backend_rust/src/: main.rs
backend_rust/src/routes/: addto_cart.rs  appliances.rs  auth_user.rs  cart.rs  data.rs  men.rs  mod.rs  remove_item.rs  set_user.rs  update_quantity.rs  user_data.rs  women.rs
