[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = "3.0.0"
serde = {version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = {version = "1.38.0", features=["tokio-macros","rt-multi-thread"]}

